Fix: Worklist UIX fix overflow list options

--- a/src/sass/openeyes/modules/clinic/_group.scss
+++ b/src/sass/openeyes/modules/clinic/_group.scss
@@ -10,7 +10,7 @@
 	// wraps: title (Worklist name)
 	// & table patient list
 	.oec-group {
-		margin:0 0 20px 0;
+		margin:0 0 30px 0;
 		position: relative;
 
 		header {
@@ -71,20 +71,26 @@
 		}
 
 		&.no-patients {
-			margin:10px 0 10px 0;
+			padding:5px 0;
+			background: var(--bg-odd-row-hint);
+			@include flex(center, flex-start);
+			gap:20px;
+			opacity: 0.5;
+			margin-block-end: 10px;
+
 			header {
 				height:auto;
 				box-shadow: none;
 
 				h3 {
-					@include font-size(15);
+					@include font-size(12);
 					color: var(--txt-light);
-					font-weight: var(--font-bold);
+					font-weight: var(--font-medium);
 				}
 			}
 
 			.result-msg {
-				@include font-size(11);
+				@include font-size(10);
 				font-weight:var(--font-light);
 				padding:0 20px;
 				color:var(--txt-light);
